--- a/compiler/chilic_parse/Cargo.toml
+++ b/compiler/chilic_parse/Cargo.toml
@@ -10,6 +10,7 @@ ptree = "0.4.0"
 codespan = "0.11.1"
 codespan-reporting = "0.11.1"
 ustr = "0.8.1"
+bitflags = "1.3.2"
 
 common = { path = "../common" }
 chilic_span = { path = "../chilic_span" }
