--- a/compiler/chilic_infer/Cargo.toml
+++ b/compiler/chilic_infer/Cargo.toml
@@ -14,4 +14,4 @@ common = { path = '../common' }
 chilic_span = { path = '../chilic_span' }
 chilic_error = { path = '../chilic_error' }
 chilic_ty = { path = '../chilic_ty' }
-chilic_ir = { path = '../chilic_ir' }
+chilic_ast = { path = '../chilic_ast' }
