--- a/compiler/chilic_ir_gen/Cargo.toml
+++ b/compiler/chilic_ir_gen/Cargo.toml
@@ -19,4 +19,4 @@ chilic_token = { path = "../chilic_token" }
 chilic_error = { path = "../chilic_error" }
 chilic_ty = { path = "../chilic_ty" }
 chilic_parse = { path = "../chilic_parse" }
-chilic_ir = { path = "../chilic_ir" }
+chilic_ast = { path = "../chilic_ast" }
