--- a/compiler/chilic_parse/Cargo.toml
+++ b/compiler/chilic_parse/Cargo.toml
@@ -16,5 +16,5 @@ common = { path = "../common" }
 chilic_span = { path = "../chilic_span" }
 chilic_token = { path = "../chilic_token" }
 chilic_error = { path = "../chilic_error" }
-chilic_ir = { path = "../chilic_ir" }
+chilic_ast = { path = "../chilic_ast" }
 chilic_ty = { path = "../chilic_ty" }
