--- a/compiler/chilic_main/Cargo.toml
+++ b/compiler/chilic_main/Cargo.toml
@@ -20,7 +20,7 @@ path-absolutize = "3.0.11"
 common = { path = "../common" }
 chilic_span = { path = "../chilic_span" }
 chilic_error = { path = "../chilic_error" }
-chilic_ir = { path = "../chilic_ir" }
+chilic_ast = { path = "../chilic_ast" }
 chilic_ir_gen = { path = "../chilic_ir_gen" }
 chilic_parse = { path = "../chilic_parse" }
 chilic_check = { path = "../chilic_check" }
