--- a/compiler/chilic_pass/Cargo.toml
+++ b/compiler/chilic_pass/Cargo.toml
@@ -12,6 +12,9 @@ codespan-reporting = "0.11.1"
 ustr = "0.8.1"
 unindent = "0.1.7"
 path-absolutize = "3.0.11"
+crossbeam = "0.8.1"
+crossbeam-utils = "0.8.7"
+dashmap = "5.1.0"
 
 common = { path = "../common" }
 chilic_span = { path = "../chilic_span" }
