--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "compiler/common",
     "compiler/chili_span",
+    "compiler/chili_workspace",
     "compiler/chili_error",
     "compiler/chili_ty",
     "compiler/chili_ast",
