--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,13 @@ members = [
     "compiler/chili_error",
     "compiler/chili_ty",
     "compiler/chili_ast",
-    "compiler/chili_astgen",
-    "compiler/chili_pass",
     "compiler/chili_token",
     "compiler/chili_parse",
-    "compiler/chili_check",
+    "compiler/chili_astgen",
+    "compiler/chili_pass",
+    "compiler/chili_resolve",
     "compiler/chili_typeck",
+    "compiler/chili_check",
     "compiler/chili_llvm",
     "compiler/chili_main",
 ]
