--- a/compiler/chili_resolve/Cargo.toml
+++ b/compiler/chili_resolve/Cargo.toml
@@ -5,3 +5,14 @@ edition = "2021"
 
 
 [dependencies]
+codespan = "0.11.1"
+codespan-reporting = "0.11.1"
+ustr = "0.8.1"
+
+common = { path = "../common" }
+chili_span = { path = "../chili_span" }
+chili_token = { path = "../chili_token" }
+chili_error = { path = "../chili_error" }
+chili_ty = { path = "../chili_ty" }
+chili_parse = { path = "../chili_parse" }
+chili_ast = { path = "../chili_ast" }
