--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -22,6 +22,7 @@ chili_span = { path = "../chili_span" }
 chili_error = { path = "../chili_error" }
 chili_ast = { path = "../chili_ast" }
 chili_astgen = { path = "../chili_astgen" }
+chili_resolve = { path = "../chili_resolve" }
 chili_pass = { path = "../chili_pass" }
 chili_parse = { path = "../chili_parse" }
 chili_check = { path = "../chili_check" }
