--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -25,5 +25,5 @@ chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
 chili_pass = { path = "../chili_pass" }
 chili_parse = { path = "../chili_parse" }
-chili_check = { path = "../chili_check" }
+chili_typeck = { path = "../chili_typeck" }
 chili_llvm = { path = "../chili_llvm" }
