--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ members = [
     "compiler/chili_token",
     "compiler/chili_parse",
     "compiler/chili_astgen",
-    "compiler/chili_pass",
     "compiler/chili_resolve",
     "compiler/chili_infer",
+    "compiler/chili_infer_new",
     "compiler/chili_typeck",
     "compiler/chili_lint",
     "compiler/chili_llvm",
