--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -23,7 +23,7 @@ chili_error = { path = "../chili_error" }
 chili_ast = { path = "../chili_ast" }
 chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
-chili_pass = { path = "../chili_pass" }
-chili_parse = { path = "../chili_parse" }
+chili_infer = { path = "../chili_infer" }
+chili_infer_new = { path = "../chili_infer_new" }
 chili_typeck = { path = "../chili_typeck" }
 chili_llvm = { path = "../chili_llvm" }
