--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -24,6 +24,5 @@ chili_ast = { path = "../chili_ast" }
 chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
 chili_infer = { path = "../chili_infer" }
-chili_infer_new = { path = "../chili_infer_new" }
-chili_typeck = { path = "../chili_typeck" }
+chili_check = { path = "../chili_check" }
 chili_llvm = { path = "../chili_llvm" }
