--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
     "compiler/chili_infer",
     "compiler/chili_check",
     "compiler/chili_lint",
-    "compiler/chili_llvm",
+    # "compiler/chili_llvm",
     "compiler/chili_main",
 ]
 
