--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -25,4 +25,4 @@ chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
 chili_infer = { path = "../chili_infer" }
 chili_check = { path = "../chili_check" }
-chili_llvm = { path = "../chili_llvm" }
+# chili_llvm = { path = "../chili_llvm" }
