--- a/compiler/chili_ast/Cargo.toml
+++ b/compiler/chili_ast/Cargo.toml
@@ -11,6 +11,7 @@ codespan = "0.11.1"
 codespan-reporting = "0.11.1"
 ustr = "0.8.1"
 path-absolutize = "3.0.11"
+bitflags = "1.3.2"
 
 common = { path = "../common" }
 chili_span = { path = "../chili_span" }
