--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -25,4 +25,5 @@ chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
 chili_infer = { path = "../chili_infer" }
 chili_check = { path = "../chili_check" }
+chili_lint = { path = "../chili_lint" }
 # chili_llvm = { path = "../chili_llvm" }
