--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -24,6 +24,7 @@ chili_ast = { path = "../chili_ast" }
 chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
 chili_infer = { path = "../chili_infer" }
+chili_infer_new = { path = "../chili_infer_new" }
 chili_check = { path = "../chili_check" }
 chili_lint = { path = "../chili_lint" }
 # chili_llvm = { path = "../chili_llvm" }
