--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ members = [
     "compiler/chili_resolve",
     "compiler/chili_infer",
     "compiler/chili_infer_new",
-    "compiler/chili_check",
-    "compiler/chili_lint",
+    # "compiler/chili_check",
+    # "compiler/chili_lint",
     # "compiler/chili_llvm",
     "compiler/chili_main",
 ]
