--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -21,6 +21,7 @@ common = { path = "../common" }
 chili_span = { path = "../chili_span" }
 chili_error = { path = "../chili_error" }
 chili_ast = { path = "../chili_ast" }
+chili_pretty_print = { path = "../chili_pretty_print" }
 chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
 # chili_infer = { path = "../chili_infer" }
