--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ members = [
     "compiler/chili_parse",
     "compiler/chili_astgen",
     "compiler/chili_resolve",
-    # "compiler/chili_infer",
-    "compiler/chili_infer_new",
+    "compiler/chili_infer",
     # "compiler/chili_check",
     # "compiler/chili_lint",
     # "compiler/chili_llvm",
