--- a/compiler/chili_infer/Cargo.toml
+++ b/compiler/chili_infer/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 codespan = "0.11.1"
 codespan-reporting = "0.11.1"
 ena = "0.14.0"
+slab = "0.4.5"
+ustr = "0.8.1"
 
 common = { path = '../common' }
 chili_span = { path = '../chili_span' }
