--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "compiler/chili_astgen",
     "compiler/chili_resolve",
     "compiler/chili_infer",
+    "compiler/chili_typeck",
     # "compiler/chili_check",
     # "compiler/chili_lint",
     # "compiler/chili_llvm",
