--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ members = [
     "compiler/chili_parse",
     "compiler/chili_astgen",
     "compiler/chili_resolve",
-    "compiler/chili_infer",
+    "compiler/chili_check",
     # "compiler/chili_typeck",
     # "compiler/chili_check",
     # "compiler/chili_lint",
