--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -23,7 +23,7 @@ chili_ast = { path = "../chili_ast" }
 chili_pretty_print = { path = "../chili_pretty_print" }
 chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
-chili_infer = { path = "../chili_infer" }
+chili_check = { path = "../chili_check" }
 # chili_typeck = { path = "../chili_typeck" }
 # chili_check = { path = "../chili_check" }
 # chili_lint = { path = "../chili_lint" }
