--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -24,7 +24,5 @@ chili_pretty_print = { path = "../chili_pretty_print" }
 chili_astgen = { path = "../chili_astgen" }
 chili_resolve = { path = "../chili_resolve" }
 chili_check = { path = "../chili_check" }
-# chili_typeck = { path = "../chili_typeck" }
-# chili_check = { path = "../chili_check" }
-# chili_lint = { path = "../chili_lint" }
+chili_lint = { path = "../chili_lint" }
 # chili_llvm = { path = "../chili_llvm" }
