--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "compiler/chili_check",
     "compiler/chili_lint",
     "compiler/chili_defer",
+    "compiler/chili_graph",
     # "compiler/chili_llvm",
     "compiler/chili_main",
 ]
