--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -26,4 +26,5 @@ chili_resolve = { path = "../chili_resolve" }
 chili_check = { path = "../chili_check" }
 chili_lint = { path = "../chili_lint" }
 chili_defer = { path = "../chili_defer" }
+chili_graph = { path = "../chili_graph" }
 # chili_llvm = { path = "../chili_llvm" }
