--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ members = [
     "compiler/chili_lint",
     "compiler/chili_defer",
     "compiler/chili_graph",
-    # "compiler/chili_llvm",
+    "compiler/chili_backend_llvm",
     "compiler/chili_main",
 ]
