--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -8,7 +8,7 @@ name = "chilic"
 path = "src/main.rs"
 
 [dependencies]
-clap = "2.33.3"
+clap = { version = "3.1.9", features = ["derive"] }
 colored = "2.0.0"
 num-format = "0.4.0"
 ustr = "0.8.1"
