--- a/compiler/chili_lint/Cargo.toml
+++ b/compiler/chili_lint/Cargo.toml
@@ -10,4 +10,4 @@ chili_span = { path = "../chili_span" }
 common = { path = "../common" }
 chili_error = { path = "../chili_error" }
 chili_ast = { path = "../chili_ast" }
-chili_check = { path = "../chili_check" }
+chili_infer = { path = "../chili_infer" }
