--- a/compiler/chili_check/Cargo.toml
+++ b/compiler/chili_check/Cargo.toml
@@ -12,3 +12,4 @@ chili_span = { path = '../chili_span' }
 chili_error = { path = '../chili_error' }
 chili_ast = { path = '../chili_ast' }
 chili_infer = { path = '../chili_infer' }
+chili_interp = { path = '../chili_interp' }
