--- a/compiler/chili_interp/Cargo.toml
+++ b/compiler/chili_interp/Cargo.toml
@@ -14,3 +14,4 @@ common = { path = "../common" }
 chili_span = { path = "../chili_span" }
 chili_error = { path = "../chili_error" }
 chili_ast = { path = "../chili_ast" }
+chili_infer = { path = "../chili_infer" }
