--- a/compiler/chili_interp/Cargo.toml
+++ b/compiler/chili_interp/Cargo.toml
@@ -17,3 +17,6 @@ chili_span = { path = "../chili_span" }
 chili_error = { path = "../chili_error" }
 chili_ast = { path = "../chili_ast" }
 chili_infer = { path = "../chili_infer" }
+
+[profile.release]
+opt-level = 0
