--- a/compiler/chili_interp/Cargo.toml
+++ b/compiler/chili_interp/Cargo.toml
@@ -11,6 +11,7 @@ ustr = "0.8.1"
 libffi = "3.0.0"
 libloading = "0.7.1"
 bytes = "1.1.0"
+byteorder = "1.4.3"
 
 common = { path = "../common" }
 chili_span = { path = "../chili_span" }
