--- a/compiler/chili_interp/Cargo.toml
+++ b/compiler/chili_interp/Cargo.toml
@@ -8,7 +8,7 @@ paste = "1.0.7"
 colored = "2.0.0"
 strum_macros = "0.23.1"
 ustr = "0.8.1"
-libffi = "3.0.0"
+libffi = { path = "../../vendor/libffi-rs/libffi-rs" }
 libloading = "0.7.1"
 byteorder = "1.4.3"
 
