--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
     "compiler/chili_interp",
     "compiler/chili_check",
     "compiler/chili_lint",
-    # "compiler/chili_backend_llvm",
+    "compiler/chili_backend_llvm",
     "compiler/chili_main",
 ]
 exclude = ["./vendor/libffi-rs"]
