--- a/compiler/chili_interp/Cargo.toml
+++ b/compiler/chili_interp/Cargo.toml
@@ -11,6 +11,7 @@ ustr = "0.8.1"
 libffi = { path = "../../vendor/libffi-rs/libffi-rs" }
 libloading = "0.7.1"
 byteorder = "1.4.3"
+bumpalo = "3.9.1"
 
 common = { path = "../common" }
 chili_span = { path = "../chili_span" }
