--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "vendor/libffi-rs"]
 path = vendor/libffi-rs
 url = https://github.com/r0nsha/libffi-rs
+update = merge
 [submodule "vendor/inkwell"]
 path = vendor/inkwell
 url = https://github.com/r0nsha/inkwell
+branch = my-missing-features
+update = merge
