--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "cargo": {
         "args": ["build", "--bin=chilic", "--package=chili_main"],
         "filter": {
-          "name": "chilic",
+          "name": "chili",
           "kind": "bin"
         }
       },
@@ -25,7 +25,7 @@
       "cargo": {
         "args": ["test", "--no-run", "--bin=chilic", "--package=chili_main"],
         "filter": {
-          "name": "chilic",
+          "name": "chili",
           "kind": "bin"
         }
       },
