--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -24,3 +24,6 @@ chili_resolve = { path = "../chili_resolve" }
 chili_check = { path = "../chili_check" }
 chili_lint = { path = "../chili_lint" }
 chili_backend_llvm = { path = "../chili_backend_llvm" }
+
+[build-dependencies]
+fs_extra = "1.2.0"
