--- a/compiler/chili_parse/Cargo.toml
+++ b/compiler/chili_parse/Cargo.toml
@@ -9,6 +9,7 @@ strum_macros = "0.23.1"
 ptree = "0.4.0"
 ustr = "0.8.1"
 bitflags = "1.3.2"
+unindent = "0.1.7"
 
 common = { path = "../common" }
 chili_span = { path = "../chili_span" }
