--- a/compiler/chili_ast/Cargo.toml
+++ b/compiler/chili_ast/Cargo.toml
@@ -10,6 +10,7 @@ ptree = "0.4.0"
 ustr = "0.8.1"
 path-absolutize = "3.0.11"
 bitflags = "1.3.2"
+indexmap = "1.8.2"
 
 common = { path = "../common" }
 chili_span = { path = "../chili_span" }
