--- a/compiler/chili_parse/Cargo.toml
+++ b/compiler/chili_parse/Cargo.toml
@@ -10,6 +10,7 @@ ptree = "0.4.0"
 ustr = "0.8.1"
 bitflags = "1.3.2"
 unindent = "0.1.7"
+parking_lot = "0.12.1"
 
 common = { path = "../common" }
 chili_span = { path = "../chili_span" }
