--- a/editors/vscode/package.json
+++ b/editors/vscode/package.json
@@ -1,18 +1,26 @@
 {
-  "name": "chili-vscode",
-  "displayName": "chili-vscode",
+  "name": "chili",
+  "displayName": "chili language support",
   "publisher": "r0nsha",
   "repository": {
     "url": "https://github.com/r0nsha/chili-vscode"
   },
   "description": "",
   "version": "0.0.1",
+  "license": "MIT",
   "engines": {
-    "vscode": "^1.46.0"
+    "vscode": "^1.67.0"
   },
   "categories": [
     "Programming Languages"
   ],
+  "keywords": [
+    "multi-root ready"
+  ],
+  "activationEvents": [
+    "onLanguage:chili"
+  ],
+  "main": "out/client/src/extension.js",
   "contributes": {
     "languages": [
       {
@@ -22,8 +30,7 @@
           "chili"
         ],
         "extensions": [
-          ".chili",
-          ".cl"
+          ".chili"
         ],
         "configuration": "./language-configuration.json"
       }
@@ -34,6 +41,56 @@
         "scopeName": "source.chili",
         "path": "./syntaxes/chili.tmLanguage.json"
       }
-    ]
+    ],
+    "configuration": {
+      "type": "object",
+      "title": "chili",
+      "properties": {
+        "chiliLanguageServer.maxNumberOfProblems": {
+          "scope": "resource",
+          "type": "number",
+          "default": 100,
+          "description": "Controls the maximum number of problems produced by the server."
+        },
+        "chiliLanguageServer.trace.server": {
+          "scope": "window",
+          "type": "string",
+          "enum": [
+            "off",
+            "messages",
+            "verbose"
+          ],
+          "default": "off",
+          "description": "Traces the communication between VS Code and the language server."
+        }
+      }
+    }
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run lint && npm run compile",
+    "esbuild-base": "esbuild server/src/server.ts client/src/extension.ts --bundle --outdir=out --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap --minify",
+    "compile": "npm run esbuild",
+    "install-code-dep": "code --install-extension connor4312.esbuild-problem-matchers && code --install-extension dbaeumer.vscode-eslint",
+    "install": "cd server; npm install; cd ../client; npm install; cd ..; npm run install-code-dep",
+    "watch": "npm run esbuild-base -- --sourcemap --watch",
+    "lint": "npx eslint ./client/src ./server/src --ext .ts,.tsx",
+    "test": "sh ./scripts/e2e.sh"
+  },
+  "dependencies": {
+    "@types/vscode": "^1.67.0",
+    "chili-lsp-server": "file:server",
+    "lsp-sample-client": "file:client"
+  },
+  "devDependencies": {
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^16.11.7",
+    "@types/tmp": "^0.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "esbuild": "^0.14.42",
+    "eslint": "^8.13.0",
+    "mocha": "^9.2.1",
+    "typescript": "^4.7.2"
   }
 }
