--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -13,6 +13,8 @@ colored = "2.0.0"
 num-format = "0.4.0"
 ustr = "0.8.1"
 path-absolutize = "3.0.11"
+serde = "1.0.137"
+serde_json = "1.0.81"
 
 common = { path = "../common" }
 chili_span = { path = "../chili_span" }
