--- a/editors/vscode/server/package.json
+++ b/editors/vscode/server/package.json
@@ -12,13 +12,12 @@
     "url": "https://github.com/r0nsha/chili/tree/main/editors/vscode"
   },
   "dependencies": {
-    "@types/vscode": "^1.67.0",
     "tmp": "^0.2.1",
     "vscode-languageserver": "^8.0.1",
     "vscode-languageserver-textdocument": "^1.0.4"
   },
-  "scripts": {},
   "devDependencies": {
-    "@types/tmp": "^0.2.3"
+    "@types/tmp": "^0.2.3",
+    "@types/vscode": "^1.67.0"
   }
 }
