--- a/compiler/chili_main/Cargo.toml
+++ b/compiler/chili_main/Cargo.toml
@@ -26,6 +26,7 @@ chili_infer = { path = "../chili_infer" }
 chili_check = { path = "../chili_check" }
 chili_lint = { path = "../chili_lint" }
 chili_backend_llvm = { path = "../chili_backend_llvm" }
+chili_driver = { path = "../chili_driver" }
 
 [build-dependencies]
 fs_extra = "1.2.0"
