--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = "1.0.81"
 unicode-xid = "0.2.2"
 unindent = "0.1.7"
 stopwatch = "0.0.7"
+backtrace = "0.3.65"
 
 inkwell = { path = "vendor/inkwell", features = ["llvm12-0"] }
 
