--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,10 +43,10 @@ inkwell = { git = "https://github.com/r0nsha/inkwell", branch = "my-missing-feat
 
 
 [target.'cfg(windows)'.dependencies]
-libffi = { path = "vendor/libffi-rs/libffi-rs" }
+libffi = { git = "https://github.com/r0nsha/libffi-rs" }
 
 [target.'cfg(unix)'.dependencies]
-libffi = { path = "vendor/libffi-rs/libffi-rs", features = ["system"] }
+libffi = { git = "https://github.com/r0nsha/libffi-rs", features = ["system"] }
 
 [build-dependencies]
 fs_extra = "1.2.0"
