--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ unicode-xid = "0.2.2"
 unindent = "0.1.7"
 stopwatch = "0.0.7"
 backtrace = "0.3.65"
+enum-as-inner = "0.5.0"
 
 # inkwell = { path = "vendor/inkwell", features = ["llvm12-0"] }
 inkwell = { git = "https://github.com/r0nsha/inkwell", branch = "my-missing-features", features = [
