--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ unindent = "0.1.7"
 stopwatch = "0.0.7"
 backtrace = "0.3.65"
 enum-as-inner = "0.5.0"
+itertools = "0.10.3"
 
 # inkwell = { path = "vendor/inkwell", features = ["llvm12-0"] }
 inkwell = { git = "https://github.com/r0nsha/inkwell", branch = "my-missing-features", features = [
