--- a/editors/vscode/package.json
+++ b/editors/vscode/package.json
@@ -30,7 +30,7 @@
           "chili"
         ],
         "extensions": [
-          ".chili"
+          ".chi"
         ],
         "configuration": "./language-configuration.json"
       }
