remove block comments from extension

--- a/editors/vscode/language-configuration.json
+++ b/editors/vscode/language-configuration.json
@@ -1,7 +1,6 @@
 {
   "comments": {
-    "lineComment": "//",
-    "blockComment": ["/*", "*/"]
+    "lineComment": "//"
   },
   "brackets": [
     ["{", "}"],
@@ -9,7 +8,6 @@
     ["(", ")"]
   ],
   "autoClosingPairs": [
-    ["/*", "*/"],
     ["(", ")"],
     { "open": "[", "close": "]", "notIn": ["comment"] },
     ["{", "}"],
