--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,9 @@ inkwell = { git = "https://github.com/r0nsha/inkwell", branch = "my-missing-feat
 
 [target.'cfg(windows)'.dependencies]
 libffi = { git = "https://github.com/r0nsha/libffi-rs" }
-winapi = { version = "0.3.9", features = ["winuser"] }
+libc = "0.2.132"
+widestring = "1.0.2"
+winapi = { version = "0.3.9", features = ["winuser", "impl-default"] }
 
 [target.'cfg(unix)'.dependencies]
 libffi = { git = "https://github.com/r0nsha/libffi-rs", features = ["system"] }
