--- a/editors/vscode/language-configuration.json
+++ b/editors/vscode/language-configuration.json
@@ -9,7 +9,7 @@
   ],
   "autoClosingPairs": [
     ["(", ")"],
-    { "open": "[", "close": "]", "notIn": ["comment"] },
+    { "open": "[", "close": "]" },
     ["{", "}"],
     { "open": "\"", "close": "\"", "notIn": ["string", "comment"] }
   ],
